fix: align code block

--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,13 @@ header h1 {
 
 .sub-header h3 {
   display: inline-block;
-  /* padding: 10%; */
   padding-left: 10px;
   vertical-align: middle;
   margin: auto;
+}
+
+table {
+  margin-bottom: 30px;
 }
 
 tr {
@@ -119,7 +122,6 @@ tr {
 }
 
 td {
-  display: inline-block;
   padding: 10;
 }
 
@@ -129,6 +131,7 @@ td {
 
 pre {
   margin: auto;
+  padding: 10px;
   font-family: monospace;
   background-color: #2b2b2e;
   font-weight: lighter;
@@ -136,9 +139,9 @@ pre {
 }
 
 code {
-  margin: 10;
+  margin: 0;
   padding: 0;
-border: 10;
+  border: 10;
 }
 
 footer {
